# citeproof

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  RESULTS.md  SECURITY.md  WHY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: verification_report.md
.github/workflows/: ci.yml  license-gate.yml  publish.yml
src/citeproof/: __init__.py  anchor.py  app.py  brain.py  extract.py  fetch.py  lexical.py  receipt.py  render.py  research.py  search.py  snapshot.py  spine.py
src/citeproof/binder/: __init__.py  binder.py  decompose.py  entailment.py  prune.py  retrieve.py  spans.py  symbolic.py
src/citeproof/eval/: __init__.py  baseline.py  harness.py  models.py  seed.py  seed_pairs.json  stats.py
src/citeproof/static/: index.html
tests/: test_anchor.py  test_app.py  test_fetch.py  test_highlight_regression.py  test_receipt.py  test_receipt_sanitize.py  test_render.py  test_research.py  test_search_brain.py  test_smoke.py  test_snapshot_extract.py  test_spine.py
tests/binder/: test_binder.py  test_decompose.py  test_entailment.py  test_prune.py  test_retrieve.py  test_spans.py  test_symbolic.py
tests/eval/: test_harness.py  test_models.py  test_stats.py
